[package]
name = "contained"
version = "1.1.0"
edition = "2021"
description = "Run a program in a Docker container for sandboxing"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
users = "0.11"
http = "1.0"
httparse = "1.8"
atoi = "2.0"
termion = "2.0"
byteorder = "1.5"

# bin dependencies
clap = { version = "4.4", features = ["derive"] }
