[package]
name = "contained"
version = "1.6.0"
edition = "2021"
description = "Various tools for sandboxing programs in Linux"
license = "Apache-2.0"

[dependencies]
serde = "~1.0.217"
serde_json = "~1.0.134"
thiserror = "~2.0.9"
anyhow = "~1.0.100"
users = "~0.11.0"
http = "~1.2.0"
httparse = "~1.9.5"
atoi = "~2.0.0"
termion = "~4.0.3"
byteorder = "~1.5.0"

# bin dependencies
clap = { version = "~4.5.50", features = ["derive"] }
